--- a/assets/css/chat-app.css
+++ b/assets/css/chat-app.css
@@ -1,3 +1,4 @@
+/** chat btn start **/
 .chat-icon {
     display: box;
     position: fixed;
@@ -69,3 +70,295 @@
       opacity: 0;
     }
 }
+
+/** chat btn end **/
+
+
+
+/** chat form start **/
+.chat-form-block {
+    opacity: 0;
+    position: fixed;
+    width: 0%;
+    right: -100%;
+    bottom: 8rem;
+    transition: all .3s ease-out;
+    background: linear-gradient(135deg, rgba(243, 244, 246, 0.95) 0%, rgba(205, 218, 241, 0.95) 100%);
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 3px 8px rgba(135, 154, 239);
+}
+
+#chat-form-block {
+    display: flex;
+    flex-direction: column;
+}
+
+.chat-form-wrapper {
+    padding: 1rem 0.5rem;
+    position: relative;
+}
+
+.chat-form-block.active {
+    opacity: 1;
+    width: 600px;
+    right: 3rem;
+}
+
+.chat-form-wrapper label {
+    margin-block: 0.5rem;
+    display: block;
+}
+
+.chat-form-wrapper select {
+    margin-bottom: 20px;
+}
+
+.chat-form-content  {
+    margin-block: 2px;
+    height: 0px;
+    opacity: 0;
+    overflow: hidden;
+    max-height: 400px;
+    padding: 10px;
+    border-radius: 10px 10px 0 0;
+    transition: all 0.5s ease-out;
+}
+
+.chat-form-content.active {
+    height: 400px;
+    opacity: 1;
+    overflow-y: scroll;
+}
+
+.chat-form-wrapper textarea {
+    border: none;
+    outline: none;
+    width: 100%;
+    padding: 0.5rem;
+    font-size: 18px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.chat-form-wrapper #chatForm textarea::placeholder {
+    font-size: 18px;
+}
+
+.chat-form-wrapper #chat-select-label {
+    font-size: 26px;
+    background: linear-gradient(-90deg, #203a6a, #895b10);
+    color: transparent;
+    background-clip: text;
+    padding-top: 20px;
+    margin-right: 20px;
+    display: inline-block;
+}
+
+#chatForm select{
+    width: 270px;
+    max-width: 270px;
+    margin: 0 auto;
+    padding: 5px;
+    font-size: 20px;
+    line-height: 1;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    height: 50px;
+    color: #031633;
+    background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png) no-repeat right #fff;
+    -webkit-appearance: none;
+    appearance: none;
+    background-position-x: 244px;
+}
+
+#chatForm select > option{
+    width: 270px;
+    max-width: 270px;
+    overflow: hidden;
+    color: #000;
+    background-color: #fff;
+    background-image: none;
+    font-size: 18px;
+    height: 50px;
+    padding: 15px;
+    border: 1px solid #63a0f4;
+}
+
+::-webkit-scrollbar {
+    width: 0.4rem;
+}
+
+::-webkit-scrollbar-track {
+    width: 0.4rem;
+    background-color: rgb(219, 237, 249);
+}
+
+::-webkit-scrollbar-thumb {
+    width: 0.4rem;
+    background-color: rgb(97, 168, 216);
+    border-radius: 20px;
+}
+
+.chat-form-wrapper .chat-btn-block {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
+#chatForm .chat-btn {
+    display: inline-block;
+    padding: 0.5rem 1.5rem;
+    border-radius: 20px;
+    background-color: #2c5cb6;
+    color: #fff;
+    font-size: 14px;
+    text-align: center;
+    cursor: pointer;
+    transition: all .4s ease-out;
+    box-shadow: 0 3px 8px rgba(135, 154, 239);
+    margin-bottom: 10px;
+    margin-right: 10px;
+    border: none;
+    outline: none;
+}
+#chatForm .chat-btn.chat-form-close-btn {
+    z-index: 10;
+    color: #000;
+    background-color: #bfc2f4;
+    padding: 0.45rem 1.5rem;
+}
+#chatForm .chat-btn:hover {
+    background-color: #537bc4;
+}
+#chatForm .chat-btn.chat-form-close-btn:hover {
+    background-color: #979ada;
+}
+
+
+
+/* message */
+.chat-message-block {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    padding: 5px 10px 0px 5px;
+    border-radius: 20px;
+    background-color:  #dbe5f8;
+    margin-bottom: 40px;
+    border: 2px solid #d3e0f8;
+    box-shadow: 0 2px 8px rgba(135, 154, 239);
+    cursor: grab;
+}
+
+.chat-message-block.chat-message-manager,
+.chat-message-block.chat-message-admin {
+    margin-left: auto;
+}
+
+.chat-message-block__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+    border-bottom: 1px solid #adc5f1;
+}
+
+.chat-message-block__header .chat-message-date {
+    color: #000;
+    font-size: 10px;
+    font-weight: 700;
+}
+
+.chat-message-block__content {
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.chat-message-block__content p {
+    color: #000;
+    font-size: 18px;
+}
+
+.chat-message-block__header .chat-message-avatar {
+    background-color: #5d82e5;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    text-transform: uppercase;
+    border-radius: 50%;
+    margin: 5px;
+    box-shadow: 0 2px 5px rgb(147, 148, 154);
+}
+
+.chat-message-block__header .chat-message-name {
+    text-transform: capitalize;
+    color: #ed9f75;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.chat-message-block__header .chat-message-topic {
+    color: #fff;
+    background-color: #749bd6;
+    padding: 3px 15px;
+    border-radius: 15px;
+    box-shadow: 0 2px 5px rgb(213, 216, 225);
+}
+
+.chat-message-block__header-left,
+.chat-message-block__header-right {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.chat-message-block.chat-message-manager .chat-message-avatar {
+    background-color: #2e1870;
+}
+
+.chat-message-block.chat-message-admin .chat-message-avatar {
+    background-color: #097918;
+}
+
+.chat-message-block.chat-message-admin .chat-message-name {
+    font-weight: 700;
+    color: rgb(62, 191, 234);
+    text-transform: uppercase;
+}
+
+.chat-message-active {
+    border: 2px solid #5d82e5;  
+}
+
+.clear-answer-btn {
+    padding: 1px 2px;
+    background-color: blue;
+    color: #fff;
+    border-radius: 10px;
+    width: 150px;
+    text-align: center;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+/** chat form end **/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
