10. work-02-books-chat-app. Display messages for current session for user.

--- a/assets/css/chat-app.scss
+++ b/assets/css/chat-app.scss
@@ -30,6 +30,11 @@
   animation: pulse 1s infinite;
 }
 
+.chat-icon button {
+  background-color: transparent;
+  cursor: pointer;
+}
+
 .chat-icon box-icon {
   color: #fff;
   fill: #fff;
