--- a/assets/css/chat-app.scss
+++ b/assets/css/chat-app.scss
@@ -88,6 +88,7 @@
 .chat-form-block {
   opacity: 0;
   position: fixed;
+  z-index: 10000;
   width: 0%;
   right: -100%;
   bottom: 8rem;
@@ -387,10 +388,18 @@
   cursor: pointer;
   transition: all .4s ease-out;
   box-shadow: 0 3px 8px rgba(135, 154, 239);
-  margin-bottom: 10px;
   margin-right: 10px;
   border: none;
   outline: none;
+}
+
+#chatForm .chat-btn.clear-answer-btn {
+  background-color: #b72610;
+  color: #fff;
+  font-size: 12px;
+  padding: 0.2rem 0.5rem;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
 #chatForm .chat-btn.chat-form-close-btn {
@@ -407,7 +416,6 @@
 #chatForm .chat-btn.chat-form-close-btn:hover {
   background-color: #979ada;
 }
-
 
 
 
@@ -507,17 +515,6 @@
 
 .message-active {
   border: 3px solid #7dbaf3;
-}
-
-.clear-answer-btn {
-  padding: 1px 2px;
-  background-color: blue;
-  color: #fff;
-  border-radius: 10px;
-  width: 150px;
-  text-align: center;
-  margin-bottom: 10px;
-  cursor: pointer;
 }
 
 /** chat form end **/
